# python-backend

./: .env.eng  .env.production  .env.test  .gitignore  Procfile  README.md  nx.json  package-lock.json  package.json  project.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.githooks/: pre-commit
.github/workflows/: CI.yaml  CI.yml  tests.yml
docs/: api_spec.yaml  postman_collection.json  python-backend.bru
scripts/: generate_apispec.py  update_collections.py
src/: app.py
src/controllers/: health_controller.py  user_controller.py
src/routes/: app_routes.py  user_routes.py
src/services/: user_service.py
src/validators/: boolean_validator.py  currency_validator.py  date_validator.py  time_validator.py
test/: conftest.py  test_app_routes.py  test_health_controller.py  test_user_controller.py  test_user_routes.py  test_validators.py
